--- a/packages/probing-statistics-api/.env
+++ b/packages/probing-statistics-api/.env
@@ -1,14 +1,17 @@
 INTEROP_PROBING_STATISTICS_APP_NAME="interop-be-probing-statistics-api-test"
+
 HOST=0.0.0.0
 PORT=3011
 LOG_LEVEL=info
+CORS_ORIGIN_ALLOWED="*"
 
 AWS_REGION="us-east-1"
-TIMESTREAM_DATABASE="probing_telemetry"
-TIMESTREAM_TABLE="telemetry"
+
+INFLUX_DB_URL="http://localhost:8086"
+INFLUX_TOKEN="token"
+INFLUX_ORG="probing"
+INFLUX_BUCKET="probing-bucket"
 
 GRAPH_PERFORMANCE_TOLERANCE="2"
 GRAPH_FAILURE_TOLERANCE="4"
 GRAPH_MAX_MONTHS="3"
-
-CORS_ORIGIN_ALLOWED="*"
