--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -19,6 +19,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@aws-sdk/client-sqs": "3.507.0",
+    "@influxdata/influxdb-client": "1.35.0",
     "@types/uuid": "9.0.8",
     "@zodios/core": "10.9.6",
     "@zodios/express": "10.6.1",
