--- a/packages/probing-statistics-api/package.json
+++ b/packages/probing-statistics-api/package.json
@@ -6,6 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "vitest --config ./test/vitest.config.ts",
+    "test:integration": "vitest run --config ./test/vitest.integration.config.ts",
+    "test:api": "vitest run --config ./test/vitest.api.config.ts",
     "lint": "eslint .",
     "lint:autofix": "eslint . --fix",
     "format:check": "prettier --check src",
@@ -27,13 +29,15 @@
     "@types/express": "4.17.21",
     "@types/node": "20.10.4",
     "@types/supertest": "6.0.2",
-    "supertest": "6.3.4",
+    "@types/uuid": "9.0.8",
+    "pagopa-interop-probing-commons-test": "workspace:*",
+    "supertest": "7.1.4",
     "ts-node": "10.9.2",
-    "typescript": "5.2.2",
-    "tsx": "4.20.5"
+    "tsx": "4.20.5",
+    "typescript": "5.2.2"
   },
   "dependencies": {
-    "@aws-sdk/client-timestream-query": "3.549.0",
+    "@influxdata/influxdb-client": "1.35.0",
     "@tsconfig/node-lts": "20.1.1",
     "@zodios/core": "10.9.6",
     "@zodios/express": "10.6.1",
@@ -45,6 +49,7 @@
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
     "ts-pattern": "5.0.6",
+    "uuid": "13.0.0",
     "zod": "3.23.8"
   }
 }
