feat(PIN-8214): migrate probing-telemetry-writer from Timestream to InfluxDB and added tests

--- a/packages/probing-api/.env
+++ b/packages/probing-api/.env
@@ -1,10 +1,11 @@
 INTEROP_PROBING_API_APP_NAME="pagopa-interop-probing-api"
-
-HOST=0.0.0.0
-PORT=3010
 LOG_LEVEL=info
 
-API_OPERATIONS_BASEURL="http://probing-eservice-operations:3000"
+
+API_OPERATIONS_BASEURL="http://localhost:3000"
+CORS_ORIGIN_ALLOWED="*"
+HOST=0.0.0.0
+PORT=3010
+
 AWS_REGION="eu-south-1"
 TOLERANCE_MULTIPLIER_IN_MINUTES=3
-CORS_ORIGIN_ALLOWED="*"
