--- a/packages/probing-telemetry-writer/.env
+++ b/packages/probing-telemetry-writer/.env
@@ -1,9 +1,13 @@
 INTEROP_PROBING_TELEMETRY_WRITER_NAME="interop-be-probing-telemetry-writer-test"
+LOG_LEVEL="info"
+
 SQS_ENDPOINT_TELEMETRY_RESULT_QUEUE="http://elasticmq:9324/000000000000/telemetry-result"
+SQS_LONG_POLL_WAIT_TIME_SECONDS="3"
 AWS_REGION="eu-south-1"
 AWS_CONFIG_FILE="aws.config.local"
-CONSUMER_POLLING_TIMEOUT_IN_SECONDS="3"
-TIMESTREAM_RETRIES="10"
-TIMESTREAM_TABLE="table_name"
-TIMESTREAM_DATABASE="database_name"
-LOG_LEVEL="info"
+
+INFLUX_DB_URL="http://localhost:8086"
+INFLUX_TOKEN="token"
+INFLUX_ORG="probing"
+INFLUX_BUCKET="probing-bucket"
+INFLUX_PRECISION="ms"
