--- a/packages/probing-scheduler/package.json
+++ b/packages/probing-scheduler/package.json
@@ -23,6 +23,7 @@
     "@types/dotenv-flow": "3.3.3",
     "@types/node": "20.10.4",
     "@types/uuid": "9.0.8",
+    "pagopa-interop-probing-commons-test": "workspace:*",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
     "tsx": "4.20.5"
