--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "devDependencies": {
     "@tsconfig/node-lts": "20.1.3",
-    "vitest": "3.2.4",
-    "turbo": "2.2.3"
+    "turbo": "2.6.1",
+    "vitest": "4.0.10"
   },
   "packageManager": "pnpm@9.15.9"
 }
